[gd_scene load_steps=43 format=2]

[ext_resource path="res://Images/YoungKinght.png" type="Texture" id=1]
[ext_resource path="res://scripts/Knight.gd" type="Script" id=2]
[ext_resource path="res://scripts/skillControls.gd" type="Script" id=3]
[ext_resource path="res://scenes/SkillCardBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/youngKnightFull.png" type="Texture" id=5]
[ext_resource path="res://scripts/AnimatedSprite.gd" type="Script" id=6]
[ext_resource path="res://scripts/KnightVarables.gd" type="Script" id=7]
[ext_resource path="res://scripts/skillManger.gd" type="Script" id=8]
[ext_resource path="res://scenes/Blink.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/Damage_Mover.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=32]
code = "shader_type canvas_item;

uniform bool active = false;
void fragment(){
	vec4 previous_color = texture(TEXTURE,UV);
	vec4 white_color = vec4(1,1,1, previous_color.a); 
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=31]
resource_local_to_scene = true
render_priority = 1
shader = SubResource( 32 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 650, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 850, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 950, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 1100, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 1150, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 50, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 250, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 350, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 550, 0, 50, 51 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 50, 51 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="Animation" id=33]
resource_name = "HitEffect"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:render_priority")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=35]
resource_name = "stopHiteffect"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Theme" id=36]
default_font = ExtResource( 10 )

[node name="Knight" type="Node2D"]
position = Vector2( 481, 413 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )
Attack = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 31 )
position = Vector2( 31.25, -12.5 )
scale = Vector2( 6, 6 )
frames = SubResource( 25 )
animation = "idle"
frame = 10
playing = true
script = ExtResource( 6 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
position = Vector2( 360, 31.25 )
rotation = 6.28318
scale = Vector2( 200, -200 )
mesh = SubResource( 1 )
texture = ExtResource( 1 )

[node name="SkilHolder" type="Node2D" parent="."]
position = Vector2( 181.25, -133.75 )
script = ExtResource( 8 )

[node name="skillControls" type="Node2D" parent="SkilHolder"]
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )
Skill_2 = 2

[node name="Skiil" parent="SkilHolder/skillControls" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "block"
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Quick Stab"
Attacks_Details = "A Quick Stab"
timerMax = 2

[node name="skillControls2" type="Node2D" parent="SkilHolder"]
visible = false
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )
SKill_1 = 2
Skill_2 = 2

[node name="Skiil" parent="SkilHolder/skillControls2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Sword Smite"
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "block"
Attacks_Details = "Blocks Half of taken damge if used "
timerMax = 2

[node name="skillControls3" type="Node2D" parent="SkilHolder"]
visible = false
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )

[node name="Skiil" parent="SkilHolder/skillControls3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "hello"
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Quick Stab"
Attacks_Details = "A Quick Stab"
timerMax = 2

[node name="skillControls4" type="Node2D" parent="SkilHolder"]
visible = false
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )

[node name="Skiil" parent="SkilHolder/skillControls4" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls4" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Quick Stab"
Attacks_Details = "A Quick Stab"
timerMax = 2

[node name="skillControls5" type="Node2D" parent="SkilHolder"]
visible = false
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )

[node name="Skiil" parent="SkilHolder/skillControls5" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls5" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Quick Stab"
Attacks_Details = "A Quick Stab"
timerMax = 2

[node name="skillControls6" type="Node2D" parent="SkilHolder"]
visible = false
position = Vector2( -181.25, 133.75 )
script = ExtResource( 3 )

[node name="Skiil" parent="SkilHolder/skillControls6" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -191.25
margin_right = -70.0
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Attacks_Details = "A Sword Slash"
timerMax = 5

[node name="Skiil2" parent="SkilHolder/skillControls6" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -231.25
margin_top = -191.25
margin_right = -231.25
margin_bottom = -191.25
__meta__ = {
"_edit_use_anchors_": true
}
Skill_Name = "Quick Stab"
Attacks_Details = "A Quick Stab"
timerMax = 2

[node name="KnightVarables" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Blink" parent="." instance=ExtResource( 9 )]
reset_on_save = false
anims/HitEffect = SubResource( 33 )
anims/RESET = SubResource( 34 )
anims/stopHiteffect = SubResource( 35 )

[node name="Timer" type="Timer" parent="Blink"]

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 46.25
margin_top = -26.25
margin_right = 106.25
margin_bottom = 5.75
theme = SubResource( 36 )
custom_colors/font_color = Color( 0.992157, 0, 0, 1 )
text = "10"

[node name="Damage_Mover" parent="." instance=ExtResource( 11 )]

[connection signal="timeout" from="Blink/Timer" to="." method="_on_Timer_timeout"]
